--- a/src/js/custom_elements/user_location/user_location.pug
+++ b/src/js/custom_elements/user_location/user_location.pug
@@ -1,18 +1,3 @@
-//- TODO(svg): Update SVG icons.
--
-  const svgPath = new Map([
-    ['location', 'M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z'],
-    ['reset', 'M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'],
-  ]);
-
-mixin icon(name)
-  svg(
-    viewBox="0 0 24 24"
-    aria-hidden="true"
-  )
-    path(d=svgPath.get(name))
-
-//-  Rendered template.
 form
   input(
     type="text"
@@ -29,10 +14,14 @@ form
     type="reset"
     aria-label="Clear location"
   )
-    +icon('reset')
+    svg(viewbox="0 0 24 24" aria-hidden="true")
+      circle(cx="12" cy="12" r="6")
+      path(d="M10,10 L14,14 M10,14 L14,10")
 button(
   id="find"
   aria-label="Find my location"
   hidden
 )
-  +icon('location')
+  svg(viewBox="0 0 24 24" aria-hidden="true")
+    //- TODO(#21): Update svg icon with hand-drawn version.
+    path(d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z")
