flattens pug svg attributes since they're always the same (no-op)

--- a/src/js/custom_elements/prev_next/prev_next.pug
+++ b/src/js/custom_elements/prev_next/prev_next.pug
@@ -1,8 +1,5 @@
 a
-  svg(
-    viewBox="0 0 24 24"
-    aria-hidden="true"
-  )
+  svg(viewBox="0 0 24 24" aria-hidden="true")
     if direction === 'prev'
       path(d='M16,4 L8,12 L16,20')
     else
