--- a/src/js/custom_elements/moon_charts/moon_charts.pug
+++ b/src/js/custom_elements/moon_charts/moon_charts.pug
@@ -1,17 +1,13 @@
 moon-photo.photo
 donut-chart(name="sun" color="#f8c537")
 donut-chart(name="moon" color="#fff")
-svg(
-  viewbox=`0 0 ${viewbox} ${viewbox}`
-  aria-hidden="true"
-)
+svg(viewbox=`0 0 ${viewbox} ${viewbox}` aria-hidden="true")
   each group in groups
     g(id=group.id)
       each line in group.lines
+        - const {x1, y1, x2, y2, transform} = line
         line(
-          x1=line.x1
-          y1=line.y1
-          x2=line.x2
-          y2=line.y2
-          transform=(line.transform ? line.transform : false)
+          x1=x1 y1=y1
+          x2=x2 y2=y2
+          transform=(transform ? transform : false)
         )
