--- a/src/js/custom_elements/user_location/user_location.pug
+++ b/src/js/custom_elements/user_location/user_location.pug
@@ -23,5 +23,5 @@ button(
   hidden
 )
   svg(viewBox="0 0 24 24" aria-hidden="true")
-    //- TODO(#21): Update svg icon with hand-drawn version.
-    path(d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z")
+    path(d="M12,2 v3 M22,12 h-3 M12,22 v-3 M2,12 h3 M5,12 A7 7 0 1 1 19,12 M5,12 A7 7 0 0 0 19,12")
+    circle(cx="12" cy="12" r="2.5")
