updates prev-next states

--- a/src/js/custom_elements/prev_next/prev_next.styl
+++ b/src/js/custom_elements/prev_next/prev_next.styl
@@ -13,12 +13,19 @@ prev-next
 
   a
     align-items center
+    background var(--background-0)
+    border-radius 50%
     display flex
     height controls-size
     justify-content center
+    transition background transition, transform transition
     width controls-size
 
-    &:active svg
+    &:focus
+    [no-touch] &:hover
+      background var(--background-1)
+
+    &:active
       transform scale(.8)
 
     path
