--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -1,5 +1,9 @@
 :root
   --fineprint em(12)
+  --background-0 rgba(white, 0)
+  --background-1 rgba(white, .15)
+  --background-2 rgba(white, .25)
+  --background-3 rgba(white, .7)
 
   @media breakpoint.small
     --fineprint em(14)
