hour ticks updated from inner/grey to outer/white

--- a/src/js/custom_elements/moon_charts/moon_charts.styl
+++ b/src/js/custom_elements/moon_charts/moon_charts.styl
@@ -20,7 +20,7 @@ moon-charts
     stroke black
 
   [id=minor-ticks] line
-    stroke rgba(black, .1)
+    stroke rgba(white, .35)
 
   [id=major-ticks] line
     stroke rgba(white, .7)
