--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -1,20 +1,11 @@
+// [1] Formatting hack to render vanilla CSS function instead of calling
+// built-in Stylus function.
 body
   display grid
-  grid-template:
-    '. info .' 2fr \
-    'charts charts charts' auto \
-    'prev date next' 1fr \
-    '. location .' 1fr / '%s minmax(auto, %s) %s' % (controls-size chart-max-size controls-size)
-  min-height calc(var(--vh, 1vh) * 100)
+  grid var(--grid)
+  min-height 'max(var(--vh, 100vh), 100vh)' % null // [1]
   overflow hidden
   padding-bottom env(safe-area-inset-bottom)
-
-  @media breakpoint.small
-    grid-template:
-      '. info .' 2fr \
-      'prev charts next' auto \
-      '. date .' 1fr \
-      '. location .' 1fr / 'minmax(%s, 1fr) minmax(%s, %s) minmax(%s, 1fr)' % (controls-size chart-size chart-max-size controls-size)
 
 // Disable UI while loading data.
 body[loading] *
@@ -22,8 +13,6 @@ body[loading] *
 
 body[no-js]
   align-items center
-  grid-template 1fr / 1fr !important
-  text-align center
 
   a
     color white
