--- a/src/stylus/html.styl
+++ b/src/stylus/html.styl
@@ -5,6 +5,8 @@
   src url('https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2') format('woff2')
 
 html
+  height -webkit-fill-available
+
 body
   background black
   color white
