--- a/src/js/custom_elements/donut_chart/donut_chart.styl
+++ b/src/js/custom_elements/donut_chart/donut_chart.styl
@@ -3,9 +3,9 @@ donut-chart
   position absolute
   width 100%
 
-  text
-    font-size em(13)
+donut-chart text
+  font-size em(13)
 
-  // Blend moon arc with sun arc where they overlap.
-  &[name=moon] circle
-    opacity .5
+// Blend moon arc with sun arc where they overlap.
+donut-chart[name='moon'] circle
+  opacity .5
