--- a/src/js/custom_elements/photo/photo.styl
+++ b/src/js/custom_elements/photo/photo.styl
@@ -1,39 +1,37 @@
-moon-photo
+moon-photo > div
+  align-items center
+  display flex
+  height 100%
+  justify-content center
+  position absolute
+  width 100%
 
-  &[hemisphere=southern] figure
-    transform rotate(180deg)
+moon-photo figure
+  border-radius 50%
+  flex 0 0 PHOTO_WIDTH
+  overflow hidden
+  padding 0 0 PHOTO_WIDTH
+  position relative
 
-  & > div
-    align-items center
-    display flex
-    height 100%
-    justify-content center
-    position absolute
-    width 100%
+moon-photo[hemisphere='southern'] figure
+  transform rotate(180deg)
 
-  figure
-    border-radius 50%
-    flex 0 0 photo-width
-    overflow hidden
-    padding 0 0 photo-width
-    position relative
-  
-  img
-    opacity 0
-    position absolute
-    transition opacity transition ease
+moon-photo img
+  opacity 0
+  position absolute
+  transition opacity TRANSITION ease
 
-    &[ready]
-      opacity 1
+moon-photo img[ready]
+  opacity 1
 
-    &[frame="1"]
-      top 0
+moon-photo img[frame='1']
+  top 0
 
-  // NOTE: Keep upper range value coordinated with JS.
-  for n in (2..26)
-    img[frame=\"{n}\"]
-      top '-%s00%' % (n - 1)
+// NOTE: Keep upper range value coordinated with JS.
+for n in (2..26)
+  moon-photo img[frame=\'{n}\']
+    top '-%s00%' % (n - 1)
 
-  .spinner
-    position absolute !important
-    top 50%
+moon-photo .spinner
+  position absolute !important
+  top 50%
