--- a/src/stylus/_constants.styl
+++ b/src/stylus/_constants.styl
@@ -1,34 +1,27 @@
-// -----------------------------------------------------------------------------
-// Dimensions.
-
 // Values below are coordinated with 'Chart' enum in 'js/modules/Constants.js'
-chart = {
-  margin: 44
-  size: 320
-  sweep-width: 72
+Chart = {
+  MARGIN: 44
+  SIZE: 320
+  SWEEP_WIDTH: 72
 }
 
-chart-size-units = chart.size + (chart.margin * 2)
+CHART_SIZE_UNITS = Chart.SIZE + (Chart.MARGIN * 2)
 
-axis-label-size = rem(32)
-button-size = rem(32)
-chart-max-size = rem(480)
-chart-size = rem(chart-size-units)
-controls-size = rem(48)
-location-height = rem(32)
-location-max-width = rem(chart.size)
-photo-size = chart.size - (chart.sweep-width * 2)
-photo-width = (photo-size / chart-size-units) * 100%
+AXIS_LABEL_SIZE = rem(32)
+BUTTON_SIZE = rem(32)
+CHART_MAX_SIZE = rem(480)
+CHART_SIZE = rem(CHART_SIZE_UNITS)
+CONTROLS_SIZE = rem(48)
+LOCATION_HEIGHT = rem(32)
+LOCATION_MAX_WIDTH = rem(Chart.SIZE)
+PHOTO_SIZE = Chart.SIZE - (Chart.SWEEP_WIDTH * 2)
+PHOTO_WIDTH = (PHOTO_SIZE / CHART_SIZE_UNITS) * 100%
+PROGRESS_BAR_HEIGHT = 3px
+PROGRESS_BAR_WIDTH = 20vw
 
-// -----------------------------------------------------------------------------
-// Transitions.
+TRANSITION = .3s
+TRANSITION_INTRO = 1s
 
-transition = .3s
-transition-intro = 1s
-
-// -----------------------------------------------------------------------------
-// Breakpoints.
-
-breakpoint = {
-  small: 'screen and (min-width: %s)' % (chart-max-size + (controls-size * 2))
+Breakpoint = {
+  SMALL: 'screen and (min-width: %s)' % (CHART_MAX_SIZE + (CONTROLS_SIZE * 2))
 }
