Removes geolocation functionality
Fully removed instead of hidden via CSS pending research into API change

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -23,7 +23,7 @@ html(lang="en-GB")
       moon-info
       moon-charts
       moon-date
-      user-location(default="New York, NY")
+      user-location(default="New Orleans, LA")
       prev-next(direction="prev")
       prev-next(direction="next")
       moon-app
