--- a/src/stylus/animations.styl
+++ b/src/stylus/animations.styl
@@ -1,43 +1,65 @@
-@keyframes blink
-  to
-    visibility hidden
+@keyframes blink {
+  to {
+    visibility: hidden;
+  }
+}
 
-@keyframes scaleIn
-  0%, 50%
-    opacity 0
-  50%
-    transform scale(2)
-  100%
-    opacity 1
+@keyframes scaleIn {
+  0%, 50% {
+    opacity: 0;
+  }
+  50% {
+    transform: scale(2);
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
-@keyframes slideInUp
-  0%, 50%
-    opacity 0
-  50%
-    transform translate3d(0, 50%, 0)
-  100%
-    opacity 1
+@keyframes slideInUp {
+  0%, 50% {
+    opacity: 0;
+  }
+  50% {
+    transform: translate3d(0, 50%, 0);
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
-@keyframes slideInDown
-  0%, 50%
-    opacity 0
-  50%
-    transform translate3d(0, -50%, 0)
-  100%
-    opacity 1
+@keyframes slideInDown {
+  0%, 50% {
+    opacity: 0;
+  }
+  50% {
+    transform translate3d(0, -50%, 0);
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
-@keyframes slideInLeft
-  0%, 50%
-    opacity 0
-  50%
-    transform translate3d(-50%, 0, 0)
-  100%
-    opacity 1
+@keyframes slideInLeft {
+  0%, 50% {
+    opacity: 0;
+  }
+  50% {
+    transform translate3d(-50%, 0, 0);
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
-@keyframes slideInRight
-  0%, 50%
-    opacity 0
-  50%
-    transform translate3d(50%, 0, 0)
-  100%
-    opacity 1
+@keyframes slideInRight {
+  0%, 50% {
+    opacity: 0;
+  }
+  50% {
+    transform: translate3d(50%, 0, 0);
+  }
+  100% {
+    opacity: 1;
+  }
+}
