--- a/src/js/custom_elements/photo/photo.styl
+++ b/src/js/custom_elements/photo/photo.styl
@@ -1,37 +1,47 @@
-moon-photo > div
-  align-items center
-  display flex
-  height 100%
-  justify-content center
-  position absolute
-  width 100%
+moon-photo {
+  & > div {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+  }
 
-moon-photo figure
-  border-radius 50%
-  flex 0 0 PHOTO_WIDTH
-  overflow hidden
-  padding 0 0 PHOTO_WIDTH
-  position relative
+  figure {
+    border-radius: 50%;
+    flex: 0 0 PHOTO_WIDTH;
+    overflow: hidden;
+    padding: 0 0 PHOTO_WIDTH;
+    position: relative;
+  }
 
-moon-photo[hemisphere='southern'] figure
-  transform rotate(180deg)
+  &[hemisphere='southern'] figure {
+    transform: rotate(180deg);
+  }
 
-moon-photo img
-  opacity 0
-  position absolute
-  transition opacity TRANSITION ease
+  img {
+    opacity: 0;
+    position: absolute;
+    transition: opacity TRANSITION ease;
+  }
 
-moon-photo img[ready]
-  opacity 1
+  img[ready] {
+    opacity: 1;
+  }
 
-moon-photo img[frame='1']
-  top 0
+  img[frame='1'] {
+    top: 0;
+  }
+
+  .spinner {
+    position: absolute !important;
+    top: 50%;
+  }
+}
 
 // NOTE: Keep upper range value coordinated with JS.
 for n in (2..26)
-  moon-photo img[frame=\'{n}\']
-    top '-%s00%' % (n - 1)
-
-moon-photo .spinner
-  position absolute !important
-  top 50%
+  moon-photo img[frame=\'{n}\'] {
+    top: '-%s00%' % (n - 1);
+  }
