--- a/src/js/custom_elements/user_location/user_location.styl
+++ b/src/js/custom_elements/user_location/user_location.styl
@@ -1,93 +1,111 @@
-user-location
-  animation slideInDown TRANSITION_INTRO ease
-  display block
-  grid-area location
-  max-width LOCATION_MAX_WIDTH
-  place-self center
-  position relative
+user-location {
+  animation: slideInDown TRANSITION_INTRO ease;
+  display: block;
+  grid-area: location;
+  max-width: LOCATION_MAX_WIDTH;
+  place-self: center;
+  position: relative;
 
-user-location
-user-location form
-user-location input
-  height LOCATION_HEIGHT
-  width 100%
+  &,
+  form,
+  input {
+    height: LOCATION_HEIGHT;
+    width: 100%;
+  }
 
-user-location form
-user-location input
-  position absolute
+  form,
+  input {
+    position: absolute;
+  }
 
-user-location input
-  align-items center
-  background var(--background-1)
-  border-radius (LOCATION_HEIGHT / 2)
-  color white
-  display inline-flex
-  font-size 1em
-  padding 0 rem(32)
-  text-align center
-  text-overflow ellipsis
-  transition background TRANSITION
+  input {
+    align-items: center;
+    background: var(--background-1);
+    border-radius: (LOCATION_HEIGHT / 2);
+    color: white;
+    display: inline-flex;
+    font-size: 1em;
+    padding: 0 rem(32);
+    text-align: center;
+    text-overflow: ellipsis;
+    transition: background TRANSITION;
 
-  &:focus
-  &:hover
-    background var(--background-2)
-    cursor pointer
+    &:focus,
+    &:hover {
+      background: var(--background-2);
+      cursor: pointer;
+    }
 
-  &:focus:hover
-    cursor text
+    &:focus:hover {
+      cursor: text;
+    }
+  }
 
-[no-touch] user-location input
-  transition background TRANSITION
+  [no-touch] & input {
+    transition: background TRANSITION;
+  }
 
-// General button styles.
-user-location button
-  align-items center
-  background 0
-  border-radius 50%
-  display inline-flex
-  height BUTTON_SIZE
-  justify-content center
-  overflow hidden
-  padding 0
-  position absolute
-  top 0
-  transition background TRANSITION
-  width BUTTON_SIZE
+  // General button styles.
+  button {
+    align-items: center;
+    background: 0;
+    border-radius: 50%;
+    display: inline-flex;
+    height: BUTTON_SIZE;
+    justify-content: center;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    transition: background TRANSITION;
+    width: BUTTON_SIZE;
+  }
 
-// Hide the submit button and capture the event on Enter/Go.
-user-location [type='submit']
-  visibility hidden
+  // Hide the submit button and capture the event on Enter/Go.
+  [type='submit'] {
+    visibility: hidden;
+  }
 
-// Reset button and icon styles.
-user-location [type='reset']
-  right 0
+  // Reset button and icon styles.
+  [type='reset'] {
+    right: 0;
 
-  & circle
-    fill rgba(white, 0)
-    transition fill TRANSITION
+    circle {
+      fill: rgba(white, 0);
+      transition: fill TRANSITION;
+    }
 
-  & path
-    fill none
-    stroke rgba(black, 0)
-    stroke-linecap round
-    stroke-width 1
-    transition stroke TRANSITION
+    path {
+      fill: none;
+      stroke: rgba(black, 0);
+      stroke-linecap: round;
+      stroke-width: 1;
+      transition: stroke TRANSITION;
+    }
+  }
 
-// Reset button states when input is focused.
-user-location input:focus ~ [type='reset']
-  & circle
-    fill var(--background-3)
+  // Reset button states when input is focused.
+  input:focus ~ [type='reset'] {
+    circle {
+      fill: var(--background-3);
+    }
 
-  & path
-    stroke rgba(black, .7)
+    path {
+      stroke: rgba(black, .7);
+    }
 
-  &:focus circle
-  [no-touch] &:hover circle
-    fill rgba(white, 1)
+    &:focus circle,
+    [no-touch] &:hover circle {
+      fill: rgba(white, 1);
+    }
 
-  &:focus path
-  [no-touch] &:hover path
-    stroke rgba(black, 1)
+    &:focus path,
+    [no-touch] &:hover path {
+      stroke: rgba(black, 1);
+    }
+  }
 
-[no-js] user-location
-  display none
+  [no-js] & {
+    display: none;
+  }
+}
