--- a/src/stylus/_functions.styl
+++ b/src/stylus/_functions.styl
@@ -1,11 +1,13 @@
 // @function
 // @param Number value
 // @return String in 'em' units
-em(value)
-  return unit(value / 16, 'em')
+em(value) {
+  return unit(value / 16, 'em');
+}
 
 // @function
 // @param Number value
 // @return String in 'rem' units
-rem(value)
-  return unit(value / 16, 'rem')
+rem(value) {
+  return unit(value / 16, 'rem');
+}
