--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -1,26 +1,31 @@
-body
-  background black
-  color white
-  display grid
-  font-family 'Avenir Variable', sans-serif
-  font-variation-settings 'wght' 500
-  grid var(--grid)
-  margin 0
-  min-height 100vh
-  min-height -webkit-fill-available
-  padding 0 0 env(safe-area-inset-bottom)
+body {
+  background: black;
+  color: white;
+  display: grid;
+  font-family: 'Avenir Variable', sans-serif;
+  font-variation-settings: 'wght' 500;
+  grid: var(--grid);
+  margin: 0;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  padding: 0 0 env(safe-area-inset-bottom);
 
-// Disable UI while loading data.
-body[loading] *
-  pointer-events none
+  // Disable UI while loading data.
+  &[loading] * {
+    pointer-events: none;
+  }
 
-body[no-js]
-  align-items center
+  &[no-js] {
+    align-items: center;
+  }
 
-body[no-js] a
-  color white
-  opacity .5
+  &[no-js] a {
+    color: white;
+    opacity: .5;
 
-  &:hover
-  &:focus
-    opacity 1
+    &:hover,
+    &:focus {
+      opacity: 1;
+    }
+  }
+}
