--- a/src/stylus/html.styl
+++ b/src/stylus/html.styl
@@ -1,49 +1,47 @@
-@font-face
-  font-display swap
-  font-family 'Avenir Variable'
-  font-weight 1 999
-  src url('https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2') format('woff2')
+@font-face {
+  font-display: swap;
+  font-family: 'Avenir Variable';
+  font-weight: 1 999;
+  src: url('https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2') format('woff2');
+}
 
-*
-  box-sizing border-box
+* {
+  box-sizing: border-box;
+}
 
-html
-  height -webkit-fill-available
-  margin 0
-  padding 0
-  -webkit-tap-highlight-color transparent
-  text-size-adjust none
+html {
+  height -webkit-fill-available;
+  -webkit-tap-highlight-color: transparent;
+  text-size-adjust: none;
+}
 
-a
-  text-decoration none
+a {
+  outline: none;
+  text-decoration: none;
+}
 
-a:focus
-  outline none
+input,
+button {
+  font-family: 'Avenir Variable', sans-serif;
+  appearance: none;
+  border: 0;
+  cursor: pointer;
+  outline: none;
+}
 
-input
-button
-  font-family 'Avenir Variable', sans-serif
-  appearance none
-  border 0
-  outline none
+figure {
+  margin: 0;
+}
 
-input:focus
-button:focus
-  outline none
+img,
+svg {
+  height: auto;
+  pointer-events: none;
+  vertical-align: middle;
+  width: 100%;
+}
 
-button:hover
-  cursor pointer
-
-figure
-  margin 0
-
-img
-svg
-  height auto
-  pointer-events none
-  vertical-align middle
-  width 100%
-
-[hidden]
-  display none !important
-  pointer-events none !important
+[hidden] {
+  display: none !important;
+  pointer-events: none !important;
+}
