--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -1,18 +1,18 @@
-@import '_functions'
-@import '_constants'
+@import '_functions';
+@import '_constants';
 
-@import 'vars'
-@import 'animations'
-@import 'html'
-@import 'body'
-@import 'main'
-@import 'progress-bar'
+@import 'vars';
+@import 'animations';
+@import 'html';
+@import 'body';
+@import 'main';
+@import 'progress-bar';
 
-@import '../js/custom_elements/app/app'
-@import '../js/custom_elements/date_display/date_display'
-@import '../js/custom_elements/donut_chart/donut_chart'
-@import '../js/custom_elements/info/info'
-@import '../js/custom_elements/moon_charts/moon_charts'
-@import '../js/custom_elements/photo/photo'
-@import '../js/custom_elements/prev_next/prev_next'
-@import '../js/custom_elements/user_location/user_location'
+@import '../js/custom_elements/app/app';
+@import '../js/custom_elements/date_display/date_display';
+@import '../js/custom_elements/donut_chart/donut_chart';
+@import '../js/custom_elements/info/info';
+@import '../js/custom_elements/moon_charts/moon_charts';
+@import '../js/custom_elements/photo/photo';
+@import '../js/custom_elements/prev_next/prev_next';
+@import '../js/custom_elements/user_location/user_location';
