--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -1,24 +1,20 @@
-body
-  --background-0 rgba(white, 0)
-  --background-1 rgba(white, .15)
-  --background-2 rgba(white, .25)
-  --background-3 rgba(white, .7)
-  --fineprint em(12)
-  --grid:
-    '. info .' 2fr \
-    'charts charts charts' \
-    'prev date next' 1fr \
-    '. location .' 1fr / '%s minmax(auto, %s) %s' % (CONTROLS_SIZE CHART_MAX_SIZE CONTROLS_SIZE)
-  --main-display contents
+body {
+  --background-0: rgba(white, 0);
+  --background-1: rgba(white, .15);
+  --background-2: rgba(white, .25);
+  --background-3: rgba(white, .7);
+  --fineprint: em(12);
+  --grid: '. info .' 2fr 'charts charts charts' 'prev date next' 1fr '. location .' 1fr / '%s minmax(auto, %s) %s' % (CONTROLS_SIZE CHART_MAX_SIZE CONTROLS_SIZE);
+  --main-display: contents;
 
-  @media Breakpoint.SMALL
-    --grid:
-      '. info .' 2fr \
-      'prev charts next' \
-      '. date .' 1fr \
-      '. location .' 1fr / 'minmax(%s, 1fr) minmax(%s, %s) minmax(%s, 1fr)' % (CONTROLS_SIZE CHART_SIZE CHART_MAX_SIZE CONTROLS_SIZE)
-    --fineprint em(14)
+  @media Breakpoint.SMALL {
+    --grid: '. info .' 2fr 'prev charts next' '. date .' 1fr '. location .' 1fr / 'minmax(%s, 1fr) minmax(%s, %s) minmax(%s, 1fr)' % (CONTROLS_SIZE CHART_SIZE CHART_MAX_SIZE CONTROLS_SIZE);
+    --fineprint: em(14);
+  }
+}
 
-[no-js]
-  --grid unset
-  --main-display grid
+[no-js] {
+  --grid: unset;
+  --main-display: grid;
+}
+
