--- a/src/js/custom_elements/info/info.styl
+++ b/src/js/custom_elements/info/info.styl
@@ -1,6 +1,6 @@
 moon-info {
   align-self: end;
-  animation: slideInDown TRANSITION_INTRO ease;
+  animation: slideInDown var(--transition-intro) ease;
   display: block;
   font-size: em(14);
   grid-area: info;
