--- a/src/js/custom_elements/moon_charts/moon_charts.styl
+++ b/src/js/custom_elements/moon_charts/moon_charts.styl
@@ -1,5 +1,5 @@
 moon-charts {
-  animation: scaleIn TRANSITION_INTRO ease;
+  animation: scaleIn var(--transition-intro) ease;
   display: block;
   grid-area: charts;
   margin: auto;
