--- a/src/js/custom_elements/photo/photo.styl
+++ b/src/js/custom_elements/photo/photo.styl
@@ -23,7 +23,7 @@ moon-photo {
   img {
     opacity: 0;
     position: absolute;
-    transition: opacity TRANSITION ease;
+    transition: opacity var(--transition) ease;
   }
 
   img[ready] {
