--- a/src/js/custom_elements/prev_next/prev_next.styl
+++ b/src/js/custom_elements/prev_next/prev_next.styl
@@ -3,12 +3,12 @@ prev-next {
   justify-self: center;
 
   &[direction='prev'] {
-    animation: slideInLeft TRANSITION_INTRO ease;
+    animation: slideInLeft var(--transition-intro) ease;
     grid-area: prev;
   }
 
   &[direction='next'] {
-    animation: slideInRight TRANSITION_INTRO ease;
+    animation: slideInRight var(--transition-intro) ease;
     grid-area: next;
     text-align: end;
   }
@@ -20,7 +20,7 @@ prev-next {
     display: flex;
     height: CONTROLS_SIZE;
     justify-content: center;
-    transition: background TRANSITION, transform TRANSITION;
+    transition: background var(--transition), transform var(--transition);
     width: CONTROLS_SIZE;
 
     &:active {
@@ -42,7 +42,7 @@ prev-next {
   svg {
     flex: 0 0 rem(32);
     height: auto;
-    transition: transform TRANSITION;
+    transition: transform var(--transition);
   }
 
   [no-js] & {
