refactors/removes em and rem functions

--- a/src/js/custom_elements/date_display/date_display.styl
+++ b/src/js/custom_elements/date_display/date_display.styl
@@ -5,7 +5,7 @@ moon-date {
   place-self: center;
 
   a {
-    padding: rem(8) rem(16);
+    padding: .5rem 1rem;
     transition: transform var(--transition);
     white-space: nowrap;
 
