--- a/src/js/custom_elements/donut_chart/donut_chart.styl
+++ b/src/js/custom_elements/donut_chart/donut_chart.styl
@@ -4,7 +4,7 @@ donut-chart {
   width: 100%;
 
   text {
-    font-size: em(13);
+    font-size: .8125em;
   }
 
   // Blend moon arc with sun arc where they overlap.
