--- a/src/js/custom_elements/info/info.styl
+++ b/src/js/custom_elements/info/info.styl
@@ -2,9 +2,9 @@ moon-info {
   align-self: end;
   animation: slideInDown var(--transition-intro) ease;
   display: block;
-  font-size: em(14);
+  font-size: .875em;
   grid-area: info;
-  margin: rem(16);
+  margin: 1rem;
   text-align: center;
   white-space: nowrap;
 
@@ -18,7 +18,7 @@ moon-info {
 
   [id='percent'] {
     color: rgba(white, .7);
-    margin-top: rem(8);
+    margin-top: .5rem;
   }
 
   [id='percent'][invisible] {
