--- a/src/js/custom_elements/prev_next/prev_next.styl
+++ b/src/js/custom_elements/prev_next/prev_next.styl
@@ -40,7 +40,7 @@ prev-next {
   }
 
   svg {
-    flex: 0 0 rem(32);
+    flex: 0 0 2rem;
     height: auto;
     transition: transform var(--transition);
   }
