--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -3,15 +3,16 @@ body {
   --background-1: rgba(white, .15);
   --background-2: rgba(white, .25);
   --background-3: rgba(white, .7);
-  --fineprint: em(12);
+  --fineprint: .75em;
   --grid: '. info .' 2fr 'charts charts charts' 'prev date next' 1fr '. location .' 1fr / '%s minmax(auto, %s) %s' % (CONTROLS_SIZE CHART_MAX_SIZE CONTROLS_SIZE);
+  --input-height: 2rem;
   --main-display: contents;
   --transition: .3s;
   --transition-intro: 1s;
 
-  @media Breakpoint.SMALL {
+  @media (min-width: 36rem) {
     --grid: '. info .' 2fr 'prev charts next' '. date .' 1fr '. location .' 1fr / 'minmax(%s, 1fr) minmax(%s, %s) minmax(%s, 1fr)' % (CONTROLS_SIZE CHART_SIZE CHART_MAX_SIZE CONTROLS_SIZE);
-    --fineprint: em(14);
+    --fineprint: .875em;
   }
 }
 
