--- a/src/js/custom_elements/photo/photo.styl
+++ b/src/js/custom_elements/photo/photo.styl
@@ -10,9 +10,9 @@ moon-photo {
 
   figure {
     border-radius: 50%;
-    flex: 0 0 PHOTO_WIDTH;
+    flex: 0 0 44%;
     overflow: hidden;
-    padding: 0 0 PHOTO_WIDTH;
+    padding: 0 0 44%;
     position: relative;
   }
 
