--- a/src/js/custom_elements/prev_next/prev_next.styl
+++ b/src/js/custom_elements/prev_next/prev_next.styl
@@ -18,10 +18,10 @@ prev-next {
     background: var(--background-1);
     border-radius: 50%;
     display: flex;
-    height: CONTROLS_SIZE;
+    height: 3rem; // TODO: var()
     justify-content: center;
     transition: background var(--transition), transform var(--transition);
-    width: CONTROLS_SIZE;
+    width: 3rem; // TODO: var()
 
     &:active {
       transform scale(.8);
