--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -4,14 +4,14 @@ body {
   --background-2: rgba(white, .25);
   --background-3: rgba(white, .7);
   --fineprint: .75em;
-  --grid: '. info .' 2fr 'charts charts charts' 'prev date next' 1fr '. location .' 1fr / '%s minmax(auto, %s) %s' % (CONTROLS_SIZE CHART_MAX_SIZE CONTROLS_SIZE);
+  --grid: '. info .' 2fr 'charts charts charts' 'prev date next' 1fr '. location .' 1fr \/ 3rem minmax(auto, 30rem) 3rem;
   --input-height: 2rem;
   --main-display: contents;
   --transition: .3s;
   --transition-intro: 1s;
 
   @media (min-width: 36rem) {
-    --grid: '. info .' 2fr 'prev charts next' '. date .' 1fr '. location .' 1fr / 'minmax(%s, 1fr) minmax(%s, %s) minmax(%s, 1fr)' % (CONTROLS_SIZE CHART_SIZE CHART_MAX_SIZE CONTROLS_SIZE);
+    --grid: '. info .' 2fr 'prev charts next' '. date .' 1fr '. location .' 1fr \/ minmax(3rem, 1fr) minmax(14.5rem, 30rem) minmax(3rem, 1fr);
     --fineprint: .875em;
   }
 }
