consts deleted, replaced with css vars

--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -3,6 +3,10 @@ body {
   --background-1: rgba(white, .15);
   --background-2: rgba(white, .25);
   --background-3: rgba(white, .7);
+  
+  --chart-size: 14.5rem;
+  --charts-max-size: 30rem;
+  --controls-size: 3rem;
   --fineprint: .75em;
   --grid: '. info .' 2fr 'charts charts charts' 'prev date next' 1fr '. location .' 1fr \/ 3rem minmax(auto, 30rem) 3rem;
   --input-height: 2rem;
