--- a/src/js/custom_elements/moon_charts/moon_charts.styl
+++ b/src/js/custom_elements/moon_charts/moon_charts.styl
@@ -3,7 +3,7 @@ moon-charts {
   display: block;
   grid-area: charts;
   margin: auto;
-  max-width: 30rem; // TODO: var()
+  max-width: var(--charts-max-size);
   padding: 0 0 100%;
   position: relative;
   width: 100%;
