--- a/src/js/custom_elements/prev_next/prev_next.styl
+++ b/src/js/custom_elements/prev_next/prev_next.styl
@@ -15,13 +15,13 @@ prev-next {
 
   a {
     align-items: center;
+    aspect-ratio: 1;
     background: var(--background-1);
     border-radius: 50%;
     display: flex;
-    height: 3rem; // TODO: var()
     justify-content: center;
     transition: background var(--transition), transform var(--transition);
-    width: 3rem; // TODO: var()
+    width: var(--controls-size);
 
     &:active {
       transform scale(.8);
