--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -1,4 +1,4 @@
-body {
+:root {
   --background-0: rgba(white, 0);
   --background-1: rgba(white, .15);
   --background-2: rgba(white, .25);
@@ -8,14 +8,14 @@ body {
   --charts-max-size: 30rem;
   --controls-size: 3rem;
   --fineprint: .75em;
-  --grid: '. info .' 2fr 'charts charts charts' 'prev date next' 1fr '. location .' 1fr \/ 3rem minmax(auto, 30rem) 3rem;
+  --grid: '. info .' 2fr 'charts charts charts' 'prev date next' 1fr '. location .' 1fr \/ var(--controls-size) minmax(auto, var(--charts-max-size)) var(--controls-size);
   --input-height: 2rem;
   --main-display: contents;
   --transition: .3s;
   --transition-intro: 1s;
 
   @media (min-width: 36rem) {
-    --grid: '. info .' 2fr 'prev charts next' '. date .' 1fr '. location .' 1fr \/ minmax(3rem, 1fr) minmax(14.5rem, 30rem) minmax(3rem, 1fr);
+    --grid: '. info .' 2fr 'prev charts next' '. date .' 1fr '. location .' 1fr \/ minmax(var(--controls-size), 1fr) minmax(var(--chart-size), var(--charts-max-size)) minmax(var(--controls-size), 1fr);
     --fineprint: .875em;
   }
 }
