sass build up and running (yay!)

--- a/src/js/custom_elements/prev_next/prev_next.scss
+++ b/src/js/custom_elements/prev_next/prev_next.scss
@@ -24,7 +24,7 @@ prev-next {
     width: var(--controls-size);
 
     &:active {
-      transform scale(.8);
+      transform: scale(.8);
     }
 
     &:focus,
