--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -33,7 +33,7 @@
     opacity: 0;
   }
   50% {
-    transform translate3d(0, -50%, 0);
+    transform: translate3d(0, -50%, 0);
   }
   100% {
     opacity: 1;
@@ -45,7 +45,7 @@
     opacity: 0;
   }
   50% {
-    transform translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
   }
   100% {
     opacity: 1;
