--- a/src/styles/html.scss
+++ b/src/styles/html.scss
@@ -10,7 +10,7 @@
 }
 
 html {
-  height -webkit-fill-available;
+  height: -webkit-fill-available;
   -webkit-tap-highlight-color: transparent;
   text-size-adjust: none;
 }
