--- a/src/js/custom_elements/photo/photo.scss
+++ b/src/js/custom_elements/photo/photo.scss
@@ -41,7 +41,8 @@ moon-photo {
 }
 
 // NOTE: Keep upper range value coordinated with JS.
-for n in (2..26)
-  moon-photo img[frame=\'{n}\'] {
-    top: '-%s00%' % (n - 1);
+@for $n from 2 through 26 {
+  moon-photo img[frame='#{$n}'] {
+    top: ($n - 1) * -100%;
   }
+}
