--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,8 +1,8 @@
 :root {
-  --background-0: rgba(white, 0);
-  --background-1: rgba(white, .15);
-  --background-2: rgba(white, .25);
-  --background-3: rgba(white, .7);
+  --background-0: #{rgba(white, 0)};
+  --background-1: #{rgba(white, .15)};
+  --background-2: #{rgba(white, .25)};
+  --background-3: #{rgba(white, .7)};
   
   --chart-size: 14.5rem;
   --charts-max-size: 30rem;
