--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,10 +9,51 @@
   box-sizing: border-box;
 }
 
+body {
+  background: black;
+  color: white;
+  display: grid;
+  font-family: 'Avenir Variable', sans-serif;
+  font-variation-settings: 'wght' 500;
+  grid: var(--grid);
+  margin: 0;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  padding: 0 0 env(safe-area-inset-bottom);
+
+  // Disable UI while loading data.
+  &[loading] * {
+    pointer-events: none;
+  }
+
+  &[no-js] {
+    align-items: center;
+  }
+
+  &[no-js] a {
+    color: white;
+    opacity: .5;
+
+    &:hover,
+    &:focus {
+      opacity: 1;
+    }
+  }
+}
+
 html {
   height: -webkit-fill-available;
   -webkit-tap-highlight-color: transparent;
   text-size-adjust: none;
+}
+
+main {
+  display: var(--main-display);
+
+  [no-js] & {
+    padding: 1.5rem;
+    place-content: center;
+  }
 }
 
 a {
