--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,7 @@
 @import 'vars';
-@import 'animations';
-@import 'html';
-@import 'body';
-@import 'main';
+@import 'base';
 @import 'progress-bar';
+@import 'animations';
 
 @import '../js/custom_elements/app/app';
 @import '../js/custom_elements/date_display/date_display';
